--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet"> 
     <link href="./style.css" rel="stylesheet">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <main>
         <div class="screen">
-            <span class="output">-0</span>
+            <span class="output"></span>
         </div>
         <div class="buttons">
             <button class="seven">7</button>
             <button class="eight">8</button>
             <button class="nine">9</button>
-            <button class="clear">AC</button> 
+            <button class="reset">AC</button> 
             <button class="four">4</button>
             <button class="five">5</button>
             <button class="six">6</button>
@@ -30,8 +30,8 @@
             <button class="three">3</button>
             <button class="subtract">—</button>
             <button class="zero">0</button>
-            <button class="multiply">×</button>
-            <button class="divide">/</button>
+            <button class="multi">×</button>
+            <button class="division">/</button>
             <button class="equal">=</button> 
         </div>
     </main>
